# text-to-speech-rs

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  docker-compose.yml
.github/workflows/: docker-image.yml
.sqlx/: query-08215f3096329a0df330850cc2288c721d14aff096fd8c941a5cc58eda205c34.json  query-0f20d95d7afe7cea64d478825ac0a53a3d3647c61b1ffb77cdab9d079704735c.json  query-2524f882402076c3354558a2edc117f35d2172736063618f04a74e5c07d34c6f.json  query-3b0589661b91b377cf40fff2e12028bb1d2390c4f3daae29bec848cda2d6b72a.json  query-3fae925faa20182a4c74dcfb2806ad86569fcd6e2e0ff741a551dfdd9c1925a7.json  query-45b5776a4a2ec65e706dfd73a47559ba3fe6ab6e232703b0c63c764100f6a74d.json  query-51210fa2c948bd59988f0b445a97c45346d96e42fe0ea8160a2ada38c3f997f6.json  query-547cb761f46be86cb8d75877b1b7ada6a34cfe06bc306aa4d68401aa1d975379.json  query-759e0831702bbe1b23330084d289e16543fdee98df8aa1cc9b41ed7bca42e5ff.json  query-83c2efc8ee1ebb4afd0335fa55ca4ac296b0c0b860d8d66d251592a0bb3d0b56.json  query-8a3c559b8a5b1ce9281827975509f5830af8b34fcec0c111c7bec56e4039899e.json  query-95ccf4cf2a939ed73016c79d5ee041ce160cfc738329d3baca18daec4bb5227e.json  query-b962c1f09db2452da67576f2d3251b554204ff4a207900e641a5ab237f4746b8.json  query-d7656ee160a146b07b18e426ad2d8296d4803a1028bf7c07dbcd94f5ad198e57.json  query-f2c12497e36b76e6a0c9f5d3647c3334e4f230239abe8d290687d183bcdd67ea.json  query-f44c4edd07ea8a188ac2d184dae95ee5220e795d83e6d523d9f7c08159206ae4.json
locales/discord/: en-US.ftl  ja.ftl
locales/tts/: en.ftl  ja.ftl
migrations/postgres/: 20251207094019_init_schema.down.sql  20251207094019_init_schema.up.sql
migrations/sqlite/: 20251207094019_init_schema.up.sql
src/: binding.rs  cli.rs  config.rs  database.rs  handler.rs  lib.rs  main.rs  sanitizer.rs  text_preprocessor.rs
src/command/: link.rs  mod.rs  moderation.rs  profile.rs  session.rs
src/localization/: mod.rs  tts.rs
src/profile/: mod.rs  resolver.rs
src/profile/repository/: mod.rs  postgres.rs  sqlite.rs
src/session/: actor.rs  driver.rs  manager.rs  mod.rs  sanitizer.rs
src/tts/: cache.rs  google.rs  google_cloud.rs  mod.rs  registry.rs  voicevox.rs
src/usecase/: session.rs
