[package]
name = "text-to-speech-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite", "postgres"]

sqlite = []
postgres = []

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
google-cloud-texttospeech-v1 = "1.3.1"
moka = { version = "0.12.11", features = ["future"]}
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
hex = "0.4.3"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
songbird = { version = "0.5.0", features = ["builtin-queue"] }
poise = "0.6.1"
dashmap = "6.1.0"
symphonia = { version = "0.5.5", features = ["all"] }
config = "0.15.19"
regex = "1.12.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
fluent = "0.17.0"
intl-memoizer = "0.5.3"
include_dir = "0.7.4"
clap = { version = "4.5.58", features = ["derive"] }
